Fix cards overlapping, not centre of col, not same length on courses pg

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,8 @@
 
 html {
     height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
 /*-------------------------------------------------------------Text*/
@@ -50,6 +52,7 @@ a {
 /*-------------------------------------------------------------Hero Container*/
 .hero-container{
     height: 100vh;
+    width: 100%;
 
     background: url("../images/christian-holzinger-unsplash.webp") no-repeat bottom right fixed; 
     background-size: cover;
@@ -83,10 +86,9 @@ a {
     height: auto;
 }
 
-.g-custom {
-    --bs-gutter-x: 1.5rem;
-    --bs-gutter-y: 1.5rem;
-    margin: auto;
+.col {
+    display: flex;
+    justify-content: center;
 }
 
 .card-link {
